--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="profile-card">
-            <img src="img/Gambar WhatsApp 2024-09-10 pukul 15.16.14_4b8e17ea.jpg"Foto Profil" class="profile-photo">
+            <img src="img/Profil.jpg" alt="Foto Profil" class="profile-photo">
             <h1>Muhammad Rifqi Ardani</h1>
             <p class="info"><strong>Tempat, Tanggal Lahir:</strong> Gresik, 01 Juli 2004</p>
             <p class="description">Seseorang yang selalu bersosialisasi terhadap orang di
@@ -48,6 +48,31 @@
                     <li>Database management</li>
                     <li>Desain UI/UX </li>
                 </ul>
+            </div>
+        </div>
+        <div class="favorite-items">
+            <h3>Barang Favorit</h3>
+            <div class="items">
+                <div class="item">
+                    <img src="img/Klub.jpg" alt="Barang 1">
+                    <p>Klub Bola Favorit</p>
+                </div>
+                <div class="item">
+                    <img src="img/kucing.jpeg" alt="Barang 2">
+                    <p>Hewan Favorit</p>
+                </div>
+                <div class="item">
+                    <img src="img/makanan.jpg" alt="Barang 3">
+                    <p>Makanan Favorit</p>
+                </div>
+                <div class="item">
+                    <img src="img/minuman.jpeg" alt="Barang 4">
+                    <p>Minuman Favorit</p>
+                </div>
+                <div class="item">
+                    <img src="img/Game.jpg" alt="Barang 5">
+                    <p>Game Favorit</p>
+                </div>
             </div>
         </div>
     </div>
